--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ body {
   justify-content: center;
   align-items: center;
   margin-top: 5vh;
+  overflow: hidden;
 }
 
 .navbar-img {
@@ -56,16 +57,25 @@ body {
 /*--------HERO--------*/
 
 .hero-container {
+  border: 1px solid green;
   width: 100vw;
-  display: flex;
-  justify-content: center;
 }
 .hero-intro-container {
-  width: 100%;
+  border: 1px solid red;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hero-intro-txt {
+  text-align: center;
 }
 .pg-lang-container {
+  border: 1px solid blue;
   display: flex;
   flex-wrap: wrap;
+  width: 80%;
 }
 .pg-lang {
   width: 15%;
