--- a/src/App.css
+++ b/src/App.css
@@ -57,28 +57,29 @@ body {
 /*--------HERO--------*/
 
 .hero-container {
-  border: 1px solid green;
   width: 100vw;
+  display: flex;
+  justify-content: center;
 }
 .hero-intro-container {
-  border: 1px solid red;
-  width: 100vw;
+  border: 1px solid green;
+  width: 90vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 2em;
 }
 
 .hero-intro-txt {
-  text-align: center;
+  text-align: left;
 }
 .pg-lang-container {
-  border: 1px solid blue;
   display: flex;
-  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   width: 80%;
 }
 .pg-lang {
-  width: 3em;
+  width: 10%;
   margin: 1em;
 }
