--- a/src/App.css
+++ b/src/App.css
@@ -61,8 +61,8 @@ body {
   display: flex;
   justify-content: center;
 }
+
 .hero-intro-container {
-  border: 1px solid green;
   width: 90vw;
   display: flex;
   flex-direction: column;
@@ -82,4 +82,36 @@ body {
 .pg-lang {
   width: 10%;
   margin: 1em;
+}
+
+@media only screen and (min-width: 540px) {
+  .hero-intro-container {
+    width: 80vw;
+  }
+  .pg-lang-container {
+    width: 60%;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .hero-intro-container {
+    width: 60vw;
+  }
+
+  .pg-lang-container {
+    width: 60%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .pg-lang-container {
+    width: 50%;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .hero-intro-container {
+    width: 40vw;
+  }
+  .pg-lang-container {
+    width: 50%;
+  }
 }
