--- a/src/App.css
+++ b/src/App.css
@@ -77,41 +77,9 @@ body {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  width: 80%;
+  width: 30rem;
 }
 .pg-lang {
-  width: 10%;
+  width: 2em;
   margin: 1em;
-}
-
-@media only screen and (min-width: 540px) {
-  .hero-intro-container {
-    width: 80vw;
-  }
-  .pg-lang-container {
-    width: 60%;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .hero-intro-container {
-    width: 60vw;
-  }
-
-  .pg-lang-container {
-    width: 60%;
-  }
-}
-
-@media only screen and (min-width: 768px) {
-  .pg-lang-container {
-    width: 50%;
-  }
-}
-@media only screen and (min-width: 1280px) {
-  .hero-intro-container {
-    width: 40vw;
-  }
-  .pg-lang-container {
-    width: 50%;
-  }
 }
