--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,8 @@ body {
 .hero-container {
   width: 100vw;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .hero-intro-container {
@@ -82,4 +83,32 @@ body {
 .pg-lang {
   width: 2em;
   margin: 1em;
+}
+
+.box-con {
+  width: 100%;
+  height: 40vh;
+  z-index: -1;
+  align-self: flex-start;
+}
+
+.green-box {
+  border-bottom: 45vh solid #93b5b3;
+  transform: skewY(5deg);
+  border-right: 200px solid transparent;
+  width: 100%;
+}
+
+.me {
+  width: 10em;
+  position: absolute;
+  z-index: 99;
+  top: 62%;
+}
+
+button {
+  width: 100%;
+  z-index: 99;
+  font-size: 1.5em;
+  padding: 3rem;
 }
