--- a/src/App.css
+++ b/src/App.css
@@ -88,22 +88,26 @@ body {
 .box-con {
   width: 100%;
   height: 40vh;
-  z-index: -1;
-  align-self: flex-start;
+  z-index: -2;
+  display: flex;
+  align-self: flex-end;
 }
 
 .green-box {
-  border-bottom: 45vh solid #93b5b3;
-  transform: skewY(5deg);
-  border-right: 200px solid transparent;
   width: 100%;
+  height: 40vh;
+  transform: skew(40deg) rotate(10deg);
+  background-color: #93b5b3;
+  position: absolute;
+  left: -40%;
+  top: 50%;
+  z-index: -1;
 }
 
 .me {
   width: 10em;
-  position: absolute;
   z-index: 99;
-  top: 62%;
+  align-self: flex-end;
 }
 
 button {
