--- a/src/App.css
+++ b/src/App.css
@@ -90,17 +90,20 @@ body {
   height: 40vh;
   z-index: -2;
   display: flex;
+  align-items: flex-end;
   align-self: flex-end;
+  border: 1px solid red;
+  position: relative;
 }
 
 .green-box {
   width: 100%;
-  height: 40vh;
+  height: 50vh;
   transform: skew(40deg) rotate(10deg);
   background-color: #93b5b3;
   position: absolute;
   left: -40%;
-  top: 50%;
+  top: 0.5%;
   z-index: -1;
 }
 
