--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5vh;
+  height: 20vh;
   overflow: hidden;
 }
 
@@ -61,6 +61,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 80vh;
 }
 
 .hero-intro-container {
@@ -69,6 +70,7 @@ body {
   flex-direction: column;
   align-items: center;
   margin-top: 2em;
+  height: 40%;
 }
 
 .hero-intro-txt {
@@ -87,12 +89,11 @@ body {
 
 .box-con {
   width: 100%;
-  height: 40vh;
+  height: 40%;
   z-index: -2;
   display: flex;
   align-items: flex-end;
   align-self: flex-end;
-  border: 1px solid red;
   position: relative;
 }
 
@@ -111,6 +112,11 @@ body {
   width: 10em;
   z-index: 99;
   align-self: flex-end;
+}
+
+.btn-container {
+  width: 100vw;
+  height: 20%;
 }
 
 button {
