--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,7 @@ body {
 
 .box-con {
   width: 100%;
-  /* height: 40%; */
+  height: 40%;
   z-index: -2;
   display: flex;
   align-items: flex-end;
@@ -104,21 +104,27 @@ body {
   background-color: #93b5b3;
   position: absolute;
   left: -40%;
-  top: 0.00001em;
+  top: 1em;
   z-index: -1;
+}
+
+.content-green-box-con {
+  border: 1px solid green;
+  width: 100vw;
+  display: flex;
 }
 
 .me {
   width: 10em;
   z-index: 99;
   align-self: flex-end;
+  border: 1px solid red;
+  margin-right: 2em;
 }
 
 .nav-text-btn {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-20%, -50%);
+  border: 1px solid blue;
+  align-self: center;
 }
 
 .btn-container {
@@ -139,6 +145,12 @@ body {
   color: #93b5b3;
 }
 
+@media only screen and (min-width: 414px) {
+  .nav-text-btn {
+    top: 40%;
+  }
+}
+
 @media only screen and (min-width: 768px) {
   .btn-container {
     display: flex;
@@ -150,6 +162,7 @@ body {
   }
 
   .nav-text-btn {
-    left: 20em;
+    left: 15em;
+    top: 50%;
   }
 }
