--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,7 @@ body {
   width: 10em;
   z-index: 99;
   align-self: flex-end;
-  margin-right: 0.5em;
+  /* margin-right: 0.5em; */
 }
 
 .nav-text-btn {
