--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,8 @@ body {
 
 .nav-text-btn {
   font-weight: 900;
-  margin: 0 0 5em 1em;
+  margin: 0 0 3em 0;
+  padding: 2em;
 }
 
 .btn-container {
