--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,20 @@ body {
   margin: 1em;
 }
 
+.pg-lang-scale {
+  width: 2em;
+  margin: 1em;
+  animation: scale 300ms ease-in-out;
+}
+@keyframes scale {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.2);
+  }
+}
+
 .box-con {
   width: 100%;
   height: 40%;
