--- a/src/App.css
+++ b/src/App.css
@@ -144,6 +144,7 @@ body {
   font-weight: 900;
   margin: 0 0 2em 0;
   padding: 2em;
+  font-size: 1.2rem;
 }
 
 .btn-container {
@@ -154,7 +155,7 @@ body {
 .btn-hero {
   width: 100%;
   z-index: 99;
-  font-size: 1.5em;
+  font-size: 1.2rem;
   padding: 3rem;
   border: 0.5px solid #93b5b3;
   -webkit-border-radius: none;
@@ -170,7 +171,7 @@ body {
   }
   .btn-hero {
     width: 25vw;
-    font-size: 1em;
+    font-size: 1.2rem;
     padding: 4.5rem;
   }
 
