--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ body {
 
 .hero-container {
   width: 100vw;
-  height: 80vh;
+  height: 88vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -69,8 +69,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2em;
-  height: 40%;
+  margin-top: 10vh;
 }
 
 .hero-intro-txt {
