--- a/src/App.css
+++ b/src/App.css
@@ -57,20 +57,25 @@ body {
   position: fixed;
   right: 0;
   width: 67vw;
-  height: 93vh;
+  height: 60vh;
   background-color: #93b5b3;
   transform: translateX(100%);
   transition: 0.5s ease-in;
 }
 
+.nav-menu li {
+  display: none;
+}
+
 .nav-toggler {
   display: block;
+  margin: 2em;
 }
 
 .nav-toggler div {
-  width: 4.5rem;
+  width: 5rem;
   height: 0.2rem;
-  margin: 0.4rem;
+  margin: 0.8rem;
   background-color: #121820;
   transition: 0.2s ease-in;
   z-index: 10;
@@ -78,13 +83,27 @@ body {
 
 .nav-active {
   transform: translateX(0);
+  box-shadow: 1px 1px 10px 0.5px #121820;
+  border-radius: 0 0 5px 0;
+}
+
+.nav-active li {
+  display: block;
+}
+
+.nav-active li:first-child {
+  margin: 10rem 5rem 1rem 5rem;
+}
+
+.nav-active li:nth-child(n + 2) {
+  margin: 1rem 5rem 1rem 5rem;
 }
 
 .toggle .line1 {
   transform: rotate(-45deg);
   position: absolute;
   background-color: #121820;
-  top: 16px;
+  top: 37px;
 }
 .toggle .line2 {
   opacity: 0;
@@ -93,8 +112,8 @@ body {
   transform: rotate(45deg);
   position: absolute;
   background-color: #121820;
-  right: -0.5px;
-  top: 17px;
+  right: 30.5px;
+  top: 37px;
 }
 
 .nav-txt-container {
@@ -123,6 +142,10 @@ body {
     background-color: rgba(255, 255, 255, 0);
     transform: translate(0%);
     transition: none;
+  }
+
+  .nav-menu li {
+    display: block;
   }
 }
 
