--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@ body {
 .nav-active {
   transform: translateX(0);
   box-shadow: 1px 1px 10px 0.5px #121820;
-  border-radius: 0 0 5px 0;
+  border-radius: 0px 0px 0px 5px;
 }
 
 .nav-active li {
