--- a/src/App.css
+++ b/src/App.css
@@ -61,9 +61,11 @@ body {
   right: 0;
   width: 67vw;
   height: 60vh;
-  background-color: #93b5b3;
+  background-color: #121820;
   transform: translateX(100%);
   transition: 0.5s ease-in;
+  text-transform: uppercase;
+  font-size: 1rem;
 }
 
 .nav-menu li {
@@ -92,14 +94,18 @@ body {
 
 .nav-active li {
   display: block;
+  color: #fff;
+  background-color: #93b5b355;
+  border-radius: 5px;
+  padding: 10px;
 }
 
 .nav-active li:first-child {
-  margin: 10rem 5rem 1rem 3rem;
+  margin: 10rem 5rem 1rem 5rem;
 }
 
 .nav-active li:nth-child(n + 2) {
-  margin: 3rem 5rem 1rem 3rem;
+  margin: 3rem 5rem 1rem 5rem;
 }
 
 .toggle .line1 {
@@ -107,6 +113,7 @@ body {
   position: absolute;
   background-color: #121820;
   top: 37px;
+  background-color: #fff;
 }
 .toggle .line2 {
   opacity: 0;
@@ -117,6 +124,7 @@ body {
   background-color: #121820;
   right: 30.5px;
   top: 37px;
+  background-color: #fff;
 }
 
 .nav-txt-container {
@@ -145,10 +153,13 @@ body {
     background-color: rgba(255, 255, 255, 0);
     transform: translate(0%);
     transition: none;
+    height: 0;
+    margin-top: 2em;
   }
 
   .nav-menu li {
     display: block;
+    cursor: pointer;
   }
 
   .nav-active li:nth-child(-n + 3) {
