--- a/src/App.css
+++ b/src/App.css
@@ -32,9 +32,19 @@ body {
   width: 10em;
 }
 
+.active-navbar-img {
+  width: 8em;
+  margin: 1rem 0em 0em 0em;
+}
+
 .img-underline {
   width: 90%;
   border-bottom: 1px solid #121820;
+}
+
+.img-underline-active {
+  width: 90%;
+  border-bottom: 3px solid #fff;
 }
 
 .name-nav-options-container {
@@ -59,8 +69,7 @@ body {
 .nav-menu {
   position: fixed;
   right: 0;
-  width: 67vw;
-  height: 60vh;
+  width: 100vw;
   background-color: #121820;
   transform: translateX(100%);
   transition: 0.5s ease-in;
@@ -89,13 +98,11 @@ body {
 
 .nav-active {
   transform: translateX(0);
-  border-radius: 0px 0px 0px 5px;
 }
 
 .nav-active li {
   display: block;
   color: #fff;
-  background-color: #93b5b355;
   border-radius: 5px;
   padding: 10px;
 }
@@ -106,6 +113,20 @@ body {
 
 .nav-active li:nth-child(n + 2) {
   margin: 3rem 5rem 1rem 5rem;
+}
+.nav-active li:nth-child(n + 5) {
+  margin-bottom: 10rem;
+}
+
+.some-con {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.some-con img {
+  width: 4em;
+  margin: 1em;
 }
 
 .toggle .line1 {
@@ -118,6 +139,7 @@ body {
 .toggle .line2 {
   opacity: 0;
 }
+
 .toggle .line3 {
   transform: rotate(45deg);
   position: absolute;
@@ -155,6 +177,7 @@ body {
     transition: none;
     height: 0;
     margin-top: 2em;
+    width: 60vw;
   }
 
   .nav-menu li {
