--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html {
@@ -23,7 +24,7 @@ body {
 
 /*--------NAVBAR--------*/
 
-button {
+.switchLang-btn {
   border: 1px solid #93b5b3;
   border-radius: 5px;
   background-color: transparent;
@@ -75,9 +76,16 @@ button {
   align-items: flex-end;
 }
 
+/* width: 50vw;
+background: rgb(0, 33, 65);
+flex-direction: column;
+transform: translateX(100%);
+transition: 0.5s ease-in; */
+
 .nav-menu {
   position: fixed;
   right: 0;
+  height: 80vh;
   width: 100vw;
   background-color: #121820;
   transform: translateX(100%);
@@ -101,7 +109,7 @@ button {
   height: 0.2rem;
   margin: 0.8rem;
   background-color: #121820;
-  transition: 0.2s ease-in;
+  transition: 0.2s ease-in-out;
   z-index: 10;
 }
 
@@ -125,14 +133,16 @@ button {
 }
 
 .some-con {
-  width: 100%;
   display: flex;
   justify-content: flex-end;
+  margin: 5em 5em 0 0;
+}
+.some-con img:first-child {
+  margin-right: 2em;
 }
 
 .some-con img {
   width: 4em;
-  margin: 1em;
 }
 
 .toggle .line1 {
