--- a/src/App.css
+++ b/src/App.css
@@ -272,12 +272,65 @@ body {
 .skill-container {
   display: flex;
   justify-content: center;
+  margin-top: 2em;
+  width: 100%;
+}
+
+.card-container {
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
 }
 
 .skills {
   cursor: pointer;
-  width: 4em;
+  width: 5em;
   text-align: center;
+  border-radius: 5px;
+}
+
+.skills:hover {
+  cursor: pointer;
+}
+.skills:active {
+  cursor: pointer;
+}
+
+.skills:first-child {
+  cursor: pointer;
+  position: absolute;
+  left: -36%;
+  top: 4%;
+  z-index: 0;
+  width: 4.5em;
+  transform: rotate(-28deg);
+}
+
+.skills:last-child {
+  cursor: pointer;
+  position: absolute;
+  left: -6%;
+  z-index: 10;
+}
+
+.skills:nth-child(2) {
+  cursor: pointer;
+  position: absolute;
+  left: -6%;
+  z-index: -1;
+}
+
+.skills:nth-child(3) {
+  cursor: pointer;
+  position: absolute;
+  left: -6%;
+  z-index: -1;
+}
+.skills:nth-child(4) {
+  cursor: pointer;
+  position: absolute;
+  left: -6%;
+  z-index: -1;
 }
 
 @media only screen and (min-width: 768px) {
