--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ body {
   transition: 0.5s ease-in;
   text-transform: uppercase;
   font-size: 1rem;
-  z-index: 99;
+  z-index: 20;
 }
 
 .nav-menu li {
@@ -118,6 +118,11 @@ body {
   display: block;
   margin: 2em;
   cursor: pointer;
+  z-index: 30;
+}
+
+.nav-toggler:hover {
+  cursor: pointer;
 }
 
 .nav-toggler div {
@@ -126,12 +131,13 @@ body {
   margin: 0.8rem;
   background-color: #121820;
   transition: 0.2s ease-in-out;
-  z-index: 10;
+  z-index: 30;
 }
 
 .nav-active {
   transform: translateX(0);
   overflow: scroll;
+  z-index: 30;
 }
 
 .nav-active li {
