move card function

--- a/src/App.css
+++ b/src/App.css
@@ -345,6 +345,164 @@ body {
   left: 42%;
   z-index: -1;
   transition: 0.5s ease-in-out;
+  animation: mymove 1s ease-in;
+}
+
+@keyframes mymove {
+  0% {
+    left: 0%;
+  }
+
+  3% {
+    left: 3%;
+  }
+
+  5% {
+    left: 5%;
+  }
+
+  7% {
+    left: 7%;
+  }
+
+  10% {
+    left: 10%;
+  }
+
+  12% {
+    left: 13%;
+  }
+
+  15% {
+    left: 15%;
+  }
+
+  17% {
+    left: 17%;
+  }
+
+  20% {
+    left: 20%;
+  }
+
+  22% {
+    left: 22%;
+  }
+
+  25% {
+    left: 25%;
+  }
+
+  27% {
+    left: 27%;
+  }
+
+  30% {
+    left: 30%;
+  }
+
+  32% {
+    left: 32%;
+  }
+
+  35% {
+    left: 35%;
+  }
+
+  37% {
+    left: 37%;
+  }
+
+  40% {
+    left: 40%;
+  }
+
+  42% {
+    left: 42%;
+  }
+
+  45% {
+    left: 45%;
+  }
+  47% {
+    left: 47%;
+  }
+  50% {
+    left: 50%;
+  }
+
+  52% {
+    left: 50%;
+  }
+
+  55% {
+    left: 55%;
+  }
+
+  57% {
+    left: 52%;
+  }
+  60% {
+    left: 50%;
+  }
+
+  62% {
+    left: 27%;
+  }
+
+  65% {
+    left: 45%;
+  }
+
+  67% {
+    left: 43%;
+  }
+  70% {
+    left: 40%;
+  }
+
+  72% {
+    left: 37%;
+  }
+
+  75% {
+    left: 35%;
+  }
+
+  77% {
+    left: 33%;
+  }
+  80% {
+    left: 30%;
+  }
+
+  82% {
+    left: 28%;
+  }
+
+  85% {
+    left: 25%;
+  }
+
+  87% {
+    left: 23%;
+  }
+  90% {
+    left: 20%;
+  }
+
+  92% {
+    left: 18%;
+  }
+  95% {
+    left: 15%;
+  }
+  97% {
+    left: 13%;
+  }
+  100% {
+    left: 0%;
+  }
 }
 
 @media only screen and (min-width: 768px) {
