--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ li:hover {
   cursor: pointer;
   transform: scale(1.1);
   transition: 0.2s ease-in-out;
-  text-decoration: underline #93b5b3;
+  text-decoration: underline #121820;
   text-underline-offset: 0.5rem;
   color: #93b5b3;
 }
@@ -73,7 +73,7 @@ body {
 
 .navbar-img {
   align-self: flex-end;
-  width: 10em;
+  width: 7em;
 }
 
 .active-navbar-img {
@@ -257,6 +257,14 @@ body {
   .nav-menu li {
     display: block;
     cursor: pointer;
+  }
+
+  .nav-active {
+    overflow: visible;
+  }
+
+  .nav-active li {
+    color: #121820;
   }
 
   .nav-active li:nth-child(-n + 3) {
