--- a/src/App.css
+++ b/src/App.css
@@ -315,7 +315,7 @@ body {
 
 .skills {
   cursor: pointer;
-  width: 4em;
+  width: 4rem;
   text-align: center;
   border-radius: 5px;
 }
@@ -333,7 +333,7 @@ body {
   left: -36%;
   top: 4%;
   z-index: 0;
-  width: 3.5em;
+  width: 3.5rem;
   transform: rotate(-28deg);
   animation: degmove 1s ease-in;
 }
