--- a/src/App.css
+++ b/src/App.css
@@ -530,6 +530,55 @@ body {
   }
 }
 
+.navbts-hero-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+  /* border: 1px solid red; */
+}
+
+.arrow-up-container {
+  /* border: 1px solid blue; */
+  margin-top: 2em;
+}
+.arrow-down-container {
+  /* border: 1px solid blue; */
+  margin-top: 2em;
+}
+
+.arrow-down-content,
+.arrow-up-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* border: 1px solid green; */
+}
+
+.arrow-down-content:hover,
+.arrow-up-content:hover {
+  transform: scale(1.1);
+  transition: 0.2s ease-in-out;
+}
+
+.arrow-down-content {
+  margin: em 0 0 0;
+}
+
+.arrow-up-content {
+  margin: 0 0 1em 0;
+}
+
+.arrow {
+  color: #121820;
+  font-size: 3em;
+  font-weight: 100;
+}
+
+.hero-link {
+  color: #121820;
+}
+
 @media only screen and (min-width: 768px) {
   .presentation-text-container {
     width: 100vw;
@@ -556,6 +605,19 @@ body {
     width: 7.5em;
     transform: rotate(-28deg);
     animation: degmove 1s ease-in;
+  }
+
+  .navbts-hero-container {
+    justify-content: center;
+    flex-direction: row;
+  }
+
+  .arrow-up-container {
+    margin: -2.5em 0 0 10em;
+    order: 1;
+  }
+  .arrow-down-container {
+    margin: 0 10em 0 0;
   }
 }
 
