--- a/src/App.css
+++ b/src/App.css
@@ -535,7 +535,7 @@ body {
   align-items: center;
   flex-direction: column;
   width: 100vw;
-  /* border: 1px solid red; */
+  border: 1px solid red;
 }
 
 @media only screen and (min-width: 768px) {
