--- a/src/App.css
+++ b/src/App.css
@@ -539,9 +539,11 @@ body {
 }
 
 .navbts-hero-container:first-child {
+  border: 1px solid green;
   margin: 1em 0 2em 0;
 }
 .navbts-hero-container:nth-child(2) {
+  border: 1px solid green;
   margin: 2em 0 0em 0;
 }
 
