--- a/src/App.css
+++ b/src/App.css
@@ -552,12 +552,13 @@ body {
   margin: 0 0 2em 0;
 }
 .to-projects {
-  border: 1px solid green;
+  border: 1px solid blue;
   margin: 2em 0 0 0;
 }
 
 .arrow {
   font-size: 2em;
+  border: 1px solid rgb(237, 135, 152);
 }
 
 @media only screen and (min-width: 768px) {
