--- a/src/App.css
+++ b/src/App.css
@@ -599,11 +599,10 @@ body {
     flex-direction: row;
   }
 
-  .arrow-up-container {
-    margin: -2.5em 0 0 10em;
+  .to-about {
     order: 1;
   }
-  .arrow-down-container {
+  .to-projects {
     margin: 0 10em 0 0;
   }
 }
