--- a/src/App.css
+++ b/src/App.css
@@ -544,7 +544,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid blue;
+  border: 3px solid blue;
 }
 
 .to-about {
@@ -552,7 +552,7 @@ body {
   margin: 0 0 2em 0;
 }
 .to-projects {
-  border: 1px solid blue;
+  border: 1px solid green;
   margin: 2em 0 0 0;
 }
 
