--- a/src/App.css
+++ b/src/App.css
@@ -602,11 +602,11 @@ body {
 
   .to-about {
     order: 1;
-    margin: 0;
+    margin: 0 0 0 2em;
     align-self: flex-start;
   }
   .to-projects {
-    margin: 0;
+    margin: 0 2em 0 0;
     align-self: flex-end;
   }
 }
