--- a/src/App.css
+++ b/src/App.css
@@ -541,6 +541,7 @@ body {
 .hero-btn-content-container {
   display: flex;
   flex-direction: column;
+  border: 1px solid black;
 }
 
 .hero-btn-container {
