--- a/src/App.css
+++ b/src/App.css
@@ -607,6 +607,7 @@ body {
   .hero-btn-content-container {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     border: 1px solid black;
   }
 
