--- a/src/App.css
+++ b/src/App.css
@@ -609,6 +609,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     border: 1px solid black;
+    width: 50%;
   }
 
   .to-about {
