--- a/src/App.css
+++ b/src/App.css
@@ -610,6 +610,7 @@ body {
     justify-content: space-between;
     border: 1px solid black;
     width: 50%;
+    margin-right: 9em;
   }
 
   .to-about {
