--- a/src/App.css
+++ b/src/App.css
@@ -602,6 +602,7 @@ body {
   .navbts-hero-container {
     flex-direction: row;
     justify-content: center;
+    margin-top: 2em;
   }
 
   .hero-btn-content-container {
