--- a/src/App.css
+++ b/src/App.css
@@ -606,6 +606,7 @@ body {
     flex-direction: row;
     justify-content: center;
     margin-top: 4em;
+    height: 12em;
   }
 
   .hero-btn-content-container {
