--- a/src/App.css
+++ b/src/App.css
@@ -292,7 +292,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  /* height: 80vh; */
+  height: 80vh;
 }
 
 .presentation-text-container {
