--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ li:hover {
   cursor: pointer;
   transform: scale(1.1);
   transition: 0.2s ease-in-out;
-  text-decoration: underline #121820;
+  text-decoration: underline #93b5b3;
   text-underline-offset: 0.5rem;
   color: #93b5b3;
 }
@@ -219,6 +219,9 @@ body {
 }
 
 @media only screen and (min-width: 768px) {
+  li:hover {
+    text-decoration: underline #121820;
+  }
   .nav-toggler {
     display: none;
   }
