--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ li:hover {
 
 .li-nav:hover > svg {
   color: #93b5b3;
-  transform: scale(1.2);
+  transform: scale(1.4);
   transition: 0.2s ease-in-out;
 }
 
@@ -227,6 +227,12 @@ body {
 @media only screen and (min-width: 768px) {
   li:hover {
     text-decoration: underline #121820;
+  }
+
+  .li-nav:hover > svg {
+    color: #93b5b3;
+    transform: scale(1.4);
+    transition: 0.2s ease-in-out;
   }
   .nav-toggler {
     display: none;
