--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ li:hover {
   transition: 0.2s ease-in-out;
   text-decoration: underline #93b5b3;
   text-underline-offset: 0.5rem;
-  color: #93b5b3;
+  /* color: #93b5b3; */
 }
 
 .li-nav:hover > svg {
@@ -278,7 +278,7 @@ body {
   }
 
   .nav-active li {
-    /* color: #121820; */
+    color: #121820;
   }
 
   .nav-active li:nth-child(-n + 3) {
