--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@ a {
 body {
   font-family: "Roboto", sans-serif;
   font-size: 1.6rem;
+  background-color: rgba(255, 255, 255, 0.321);
 }
 
 /*--------NAVBAR--------*/
