--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ a {
 body {
   font-family: "Roboto", sans-serif;
   font-size: 1.6rem;
-  background-color: rgba(0, 0, 0, 0.399);
+  background-color: black;
 }
 
 /*--------NAVBAR--------*/
