--- a/src/App.css
+++ b/src/App.css
@@ -251,7 +251,7 @@ body {
   }
 
   .switchLang-btn-active {
-    color: #121820;
+    /* color: #121820; */
     margin: -0.5rem 5rem 0 3rem;
   }
 
@@ -260,7 +260,7 @@ body {
     border: 1px solid #93b5b3;
     border-radius: 5px;
     background-color: transparent;
-    color: #121820;
+    /* color: #121820; */
     margin: -0.5rem 5rem 0 3rem;
     text-align: center;
     height: 2.5em;
@@ -279,7 +279,7 @@ body {
   }
 
   .nav-active li {
-    color: #121820;
+    /* color: #121820; */
   }
 
   .nav-active li:nth-child(-n + 3) {
@@ -591,7 +591,7 @@ body {
 }
 
 .hero-link {
-  color: #121820;
+  /* color: #121820; */
   text-transform: uppercase;
 }
 
