--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@ body {
 
 .img-underline {
   width: 90%;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid #93b5b3;
 }
 
 .img-underline-active {
