--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 0.5px solid #121820;
+  /* border: 0.5px solid #121820; */
 }
 
 .logo-w,
