--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,8 @@ body {
   justify-content: center;
   align-items: center;
   border: 0.5px solid #121820;
+  position: absolute;
+  left: 5px;
 }
 
 .logo-w,
