--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ body {
 /*--------NAVBAR--------*/
 
 .logo-cirkle {
-  width: 2em;
+  width: 2.5em;
   border-radius: 50%;
   display: flex;
   flex-direction: column;
@@ -48,7 +48,8 @@ body {
   align-items: center;
   border: 0.5px solid #121820;
   position: absolute;
-  left: 5px;
+  left: 1em;
+  margin: 2em;
 }
 
 .logo-w,
@@ -105,10 +106,10 @@ body {
   margin: 1rem 0em 0em 0em;
 }
 
-.img-underline {
+/* .img-underline {
   width: 90%;
   border-bottom: 1px solid #121820;
-}
+} */
 
 .img-underline-active {
   width: 90%;
@@ -120,24 +121,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-}
-
-.navbar-name-container {
-  display: flex;
-  justify-content: flex-end;
-  flex-direction: column;
-  font-weight: 400;
-}
-
-.navbar-name {
-  font-size: 1.3em;
-}
-
-.navbar-name:first-child {
-  font-weight: 300;
-}
-.navbar-name:nth-child(n + 2) {
-  font-weight: 100;
+  height: 33vh;
 }
 
 .nav-menu-container {
@@ -307,10 +291,6 @@ body {
   .navbar-img {
     width: 15em;
   }
-
-  .navbar-name {
-    font-size: 2.5em;
-  }
 }
 
 @media only screen and (min-width: 1024px) {
@@ -328,15 +308,32 @@ body {
   height: 60vh;
 }
 
+.navbar-name,
+.presentation-text {
+  width: 82%;
+}
+
+.navbar-name {
+  text-align: start;
+  font-size: 2rem;
+}
+
+.navbar-name:first-child {
+  font-weight: 300;
+}
+.navbar-name:nth-child(n + 2) {
+  font-weight: 100;
+}
+
 .presentation-text-container {
   width: 100vw;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .presentation-text {
   font-weight: 100;
-  width: 82%;
   margin-top: 1rem;
 }
 .skill-container {
@@ -573,14 +570,12 @@ body {
   display: flex;
   justify-content: center;
   width: 100vw;
-  /* border: 1px solid red; */
   margin: 1em 0 0 0;
 }
 
 .hero-btn-content-container {
   display: flex;
   flex-direction: column;
-  /* border: 1px solid black; */
 }
 
 .hero-btn-container {
@@ -588,24 +583,17 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* border: 3px solid blue; */
-}
-
-.hero-btn-container:hover {
 }
 
 .to-about {
-  /* border: 1px solid green; */
   margin: 0 0 2em 0;
 }
 .to-projects {
-  /* border: 1px solid green; */
   margin: 2em 0 0 0;
 }
 
 .arrow {
   font-size: 2em;
-  /* border: 1px solid rgb(237, 135, 152); */
 }
 
 .hero-link {
@@ -616,16 +604,16 @@ body {
 @media only screen and (min-width: 768px) {
   .presentation-text-container {
     width: 100vw;
-    display: block;
   }
-  .presentation-text {
-    margin-left: 15em;
+
+  .presentation-text-container div {
+    margin-left: -15rem;
     width: 50%;
   }
 
   .skills {
     cursor: pointer;
-    width: 8em;
+    width: 6em;
     text-align: center;
     border-radius: 5px;
   }
@@ -636,7 +624,7 @@ body {
     left: -36%;
     top: 4%;
     z-index: 0;
-    width: 7.5em;
+    width: 5.5em;
     transform: rotate(-28deg);
     animation: degmove 1s ease-in;
   }
