--- a/src/App.css
+++ b/src/App.css
@@ -336,6 +336,10 @@ body {
   font-weight: 100;
   margin-top: 1rem;
 }
+
+.swith-card {
+  color: #93b5b3;
+}
 .skill-container {
   display: flex;
   justify-content: center;
