--- a/src/App.css
+++ b/src/App.css
@@ -343,7 +343,9 @@ body {
 }
 .skill-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
   margin-top: 0.5em;
   width: 100%;
 }
