--- a/src/App.css
+++ b/src/App.css
@@ -595,6 +595,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 1px solid #121820;
 }
 
 .hero-btn-container a {
