--- a/src/App.css
+++ b/src/App.css
@@ -596,6 +596,7 @@ body {
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #121820;
+  width: 52vw;
 }
 
 .hero-btn-container a {
