--- a/src/App.css
+++ b/src/App.css
@@ -300,7 +300,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 60vh;
+  /* height: 60vh; */
 }
 
 .navbar-name,
