--- a/src/App.css
+++ b/src/App.css
@@ -300,6 +300,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin-top: 1em;
   /* height: 60vh; */
 }
 
