--- a/src/App.css
+++ b/src/App.css
@@ -116,7 +116,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  /* height: 15vh; */
+  height: 10vh;
 }
 
 .nav-menu-container {
