--- a/src/App.css
+++ b/src/App.css
@@ -354,11 +354,9 @@ body {
 .skill-container {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
   margin-top: -1.5em;
-
-  width: 100%;
+  width: 100vw;
 }
 
 .card-container {
