--- a/src/App.css
+++ b/src/App.css
@@ -584,13 +584,9 @@ body {
 
 .navbts-hero-container {
   display: flex;
-  justify-content: center;
-  margin: 1em 0 0 0;
-}
-
-.hero-btn-content-container {
-  display: flex;
   flex-direction: column;
+  align-items: center;
+  margin: 1em 0 0 0;
 }
 
 .hero-btn-container {
@@ -601,9 +597,9 @@ body {
   width: 60vw;
 }
 
-.hero-btn-content-container a {
+/* .hero-btn-content-container a {
   text-transform: uppercase;
-}
+} */
 
 .to-about {
   margin: 0 0 0 0;
