--- a/src/App.css
+++ b/src/App.css
@@ -658,7 +658,7 @@ body {
     height: 10em;
   }
 
-  .to-about {
+  .to-aboutme-link {
     order: 1;
     margin: 0 0 0 2em;
     align-self: flex-start;
