--- a/src/App.css
+++ b/src/App.css
@@ -663,7 +663,7 @@ body {
     margin: 0 0 0 2em;
     align-self: flex-start;
   }
-  .to-projects {
+  .to-project-link {
     margin: 0 2em 0 0;
     align-self: flex-end;
   }
