--- a/src/App.css
+++ b/src/App.css
@@ -663,6 +663,7 @@ body {
   .to-aboutme-link {
     order: 1;
     margin: 0 0 0 2em;
+    align-self: flex-end;
   }
   .to-project-link {
     margin: 0 2em 0 0;
