--- a/src/App.css
+++ b/src/App.css
@@ -659,6 +659,7 @@ body {
   .navbts-hero-container {
     flex-direction: row;
     justify-content: center;
+    margin-left: -14%;
   }
 
   .to-aboutme-link {
