--- a/src/App.css
+++ b/src/App.css
@@ -675,6 +675,12 @@ body {
   .arrow-container {
     order: 2;
   }
+
+  .card-container {
+    position: absolute;
+    left: 70%;
+    top: 60%;
+  }
 }
 
 /* MAIN */
