--- a/src/App.css
+++ b/src/App.css
@@ -631,6 +631,10 @@ body {
     justify-content: center;
   }
 
+  .skill-container div {
+    width: 50%;
+  }
+
   .skills {
     cursor: pointer;
     width: 8em;
