--- a/src/App.css
+++ b/src/App.css
@@ -357,6 +357,12 @@ body {
   width: 100vw;
 }
 
+.skill-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .card-container {
   display: flex;
   justify-content: flex-end;
