--- a/src/App.css
+++ b/src/App.css
@@ -370,8 +370,6 @@ body {
 }
 
 .card-container {
-  /* display: flex;
-  justify-content: flex-end; */
   position: relative;
 }
 
@@ -620,6 +618,7 @@ body {
 .hero-link {
   color: #121820;
   text-transform: uppercase;
+  width: 13em;
 }
 
 @media only screen and (min-width: 768px) {
