--- a/src/App.css
+++ b/src/App.css
@@ -359,14 +359,17 @@ body {
 }
 
 .skill-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: -1.5em;
   width: 100vw;
 }
 
 .skill-content {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
 }
 
 .card-container {
