--- a/src/App.css
+++ b/src/App.css
@@ -660,24 +660,30 @@ body {
     margin-top: 1rem;
   }
 
+  .skill-content {
+    display: flex;
+    justify-content: space-between;
+  }
+  .arrow-card-container {
+    order: 2;
+  }
+
   .navbts-hero-container {
     flex-direction: row;
     justify-content: center;
-    margin-left: -33.5%;
   }
 
   .to-aboutme-link {
     order: 1;
-    margin: 5em 0 0 1em;
-    align-self: flex-end;
-  }
-  .to-project-link {
-    margin: 5em 1em 0 0;
   }
 
   .to-about,
   .to-projects {
     font-size: 1.5rem;
+  }
+
+  .to-projects {
+    margin: 0;
   }
 
   .arrow-to-skills {
