--- a/src/App.css
+++ b/src/App.css
@@ -676,6 +676,10 @@ body {
     order: 1;
   }
 
+  .to-projects-link {
+    margin-right: 1.5em;
+  }
+
   .to-about,
   .to-projects {
     font-size: 1.5rem;
