--- a/src/App.css
+++ b/src/App.css
@@ -671,6 +671,7 @@ body {
   .navbts-hero-container {
     flex-direction: row;
     justify-content: center;
+    margin-top: 2em;
   }
 
   .to-aboutme-link {
