--- a/src/App.css
+++ b/src/App.css
@@ -667,6 +667,8 @@ body {
     justify-content: space-between;
     margin-left: 0;
     width: 60%;
+    height: 40vh;
+    border-bottom: 1px solid red;
   }
   .arrow-card-container {
     order: 2;
