--- a/src/App.css
+++ b/src/App.css
@@ -673,12 +673,12 @@ body {
     order: 2;
     display: flex;
     flex-direction: row;
-    border: 1px solid red;
+    /* border: 1px solid red; */
   }
 
   .card-container {
     align-self: flex-end;
-    border: 1px solid green;
+    /* border: 1px solid green; */
     margin-bottom: 1.5em;
   }
 
@@ -710,7 +710,7 @@ body {
     margin-right: 5em;
     margin-top: 0;
     align-self: flex-start;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
   }
 
   .arrow-to-skills {
@@ -720,7 +720,7 @@ body {
   .arrow-desk {
     display: block;
     height: 15em;
-    border: 1px solid #121820;
+    /* border: 1px solid #121820; */
   }
 }
 
