--- a/src/App.css
+++ b/src/App.css
@@ -725,16 +725,6 @@ body {
 
 /* MAIN */
 
-.main-wrapper {
-  margin: 5em;
-  font-size: 1.2rem;
-}
-
-h2 {
-  margin: 2em 0em 0.5em 0em;
-}
-
-.link-to-p {
-  display: block;
-  margin: 1em 0;
+.projects {
+  height: 100vh;
 }
