--- a/src/App.css
+++ b/src/App.css
@@ -236,7 +236,7 @@ body {
   }
 
   .nav-menu {
-    position: block !important;
+    position: none;
     display: flex;
     top: 0;
     justify-content: space-around;
