--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -1,7 +1,46 @@
+#projects {
+  display: flex;
+  overflow: auto;
+  scrollbar-width: none;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#projects::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#projects {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 .project-card-container {
-  width: 70vw;
+  width: 80vw;
+  margin: 0.5em;
+  border-bottom: 0.5px solid #101820;
 }
 
 .project-card-container img {
-  width: 100%;
+  width: 80vw;
+  border-radius: 5px;
+}
+
+.project-header {
+  font-size: 2.5rem;
+  font-weight: 400;
+  margin: 0.5em 0 0.5em 0;
+}
+
+.project-discription {
+  overflow: hidden;
+  font-size: 1.5rem;
+  font-weight: 300;
+  margin: 0 0 0.5em 0;
+}
+
+.built-with-txt {
+  font-size: 1.8rem;
+  font-weight: 400;
+  margin-bottom: 1em;
 }
