--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -1,10 +1,12 @@
 #projects {
   width: 100vw;
   display: flex;
-  overflow: auto;
+  flex-direction: column;
+  align-items: center;
+  /* overflow: auto;
   scrollbar-width: none;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; 
+  scrollbar-width: none; */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -13,13 +15,23 @@
 }
 
 .project-card-container {
+  width: 80vw;
   margin: 0.5em;
   border-bottom: 0.5px solid #101820;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .project-card-container img {
   width: 80vw;
   border-radius: 5px;
+}
+
+.p-header-container,
+.p-discription-container,
+.built-with-container {
+  width: 100%;
 }
 
 .project-header {
