--- a/src/css/projects/projectsMobile.css
+++ b/src/css/projects/projectsMobile.css
@@ -56,7 +56,7 @@
 
 .project-btn {
   background-color: transparent;
-  padding: 2em;
+  padding: 1em 2em;
   border-radius: 5px;
   color: #101820;
   font-size: 1.5rem;
